Fix sidebar z-index

--- a/css/navigation.css
+++ b/css/navigation.css
@@ -25,7 +25,7 @@
     background-color: var(--blue);
     color: var(--white);
     padding: 10px 20px;
-    z-index: 999;
+    z-index: 99;
     font-family: Roboto;
     display: block;
   }
